commit new Simple_Draw and OpenGL

--- a/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
+++ b/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
@@ -262,6 +262,14 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\res\bitmap2.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\res\icon1.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\res\Simple_Draw.ico"
 				>
 			</File>
@@ -279,6 +287,10 @@
 			</File>
 			<File
 				RelativePath=".\res\Toolbar.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\res\toolbar1.bmp"
 				>
 			</File>
 			<File
