--- a/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
+++ b/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
@@ -186,6 +186,14 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\CustomCombo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CustomComboButton.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\MainFrm.cpp"
 				>
 			</File>
@@ -228,6 +236,14 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\CustomCombo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CustomComboButton.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MainFrm.h"
 				>
 			</File>
@@ -263,6 +279,10 @@
 			>
 			<File
 				RelativePath=".\res\bitmap2.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\res\bmp00001.bmp"
 				>
 			</File>
 			<File
