--- a/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
+++ b/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
@@ -186,6 +186,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ControlContextDlg.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\CustomCombo.cpp"
 				>
 			</File>
@@ -229,12 +233,20 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\TextEditor.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\ControlContextDlg.h"
+				>
+			</File>
 			<File
 				RelativePath=".\CustomCombo.h"
 				>
@@ -269,6 +281,10 @@
 			</File>
 			<File
 				RelativePath=".\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TextEditor.h"
 				>
 			</File>
 		</Filter>
