added new functions

--- a/Simple_Draw/Simple_Draw/Simple_Draw.rc
+++ b/Simple_Draw/Simple_Draw/Simple_Draw.rc
@@ -132,11 +132,12 @@ END
 IDR_TOOLBAR_DIRECT TOOLBAR  16, 16
 BEGIN
     BUTTON      ID_FRONT
-    BUTTON      ID_TOP
-    BUTTON      ID_RIGHT
-    BUTTON      ID_LEFT
     BUTTON      ID_BEHIND
+    BUTTON      ID_TOP
     BUTTON      ID_BOTTOM
+    BUTTON      ID_LEFT
+    BUTTON      ID_RIGHT
+    SEPARATOR
     BUTTON      ID_PAN_STANDAR
     SEPARATOR
     BUTTON      ID_ZOOM_IN
