--- a/Simple_Draw/Simple_Draw/Simple_Draw.rc
+++ b/Simple_Draw/Simple_Draw/Simple_Draw.rc
@@ -151,6 +151,7 @@ BEGIN
     BUTTON      ID_MOVE_LEFT
     BUTTON      ID_MOVE_RIGHT
     BUTTON      ID_COORDINATE_FULL
+    BUTTON      ID_BUTTON32885
 END
 
 IDR_TOOLBAR_OFFICE TOOLBAR  16, 15
