--- a/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
+++ b/Simple_Draw/Simple_Draw/Simple_Draw.vcproj
@@ -338,6 +338,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\res\mainfram.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\res\S_D.ico"
 				>
 			</File>
