--- a/MathFuncsLib/MyExecRefsLib/MyExecRefsLib.vcxproj
+++ b/MathFuncsLib/MyExecRefsLib/MyExecRefsLib.vcxproj
@@ -70,7 +70,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>G:\DAMME88\PROGRAMMING\2_SOURCE CODE\C ++ PROGRAM\12_DLL\Lib_Study\MathFuncsLib\MathFuncsLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
