new change graphics about coordinate

--- a/Opengl_MFC_Terrian/OpenGL_MFC/OpenGL_MFC/OpenGL_MFC.vcxproj
+++ b/Opengl_MFC_Terrian/OpenGL_MFC/OpenGL_MFC/OpenGL_MFC.vcxproj
@@ -41,8 +41,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Program Files\Microsoft SDKs\Windows\v7.0A\Include\gl;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Program Files\Microsoft SDKs\Windows\v7.0A\Lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Program Files\Microsoft Visual Studio 10.0\VC\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files\Microsoft Visual Studio 10.0\VC\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -106,6 +106,7 @@
     <None Include="UserImages.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HandleBitmap.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="OpenGL_MFC.h" />
     <ClInclude Include="OpenGL_MFCDoc.h" />
