--- a/Opengl_MFC_Terrian/OpenGL_MFC/OpenGL_MFC/OpenGL_MFC.vcxproj.filters
+++ b/Opengl_MFC_Terrian/OpenGL_MFC/OpenGL_MFC/OpenGL_MFC.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\ImageHandle">
+      <UniqueIdentifier>{6dbc7f45-10c5-4c82-99c3-e56e829a5ee5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
@@ -56,6 +59,9 @@
     </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HandleBitmap.h">
+      <Filter>Source Files\ImageHandle</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
