--- a/Cad_Show/Cad_Show/Cad_Show.vcxproj
+++ b/Cad_Show/Cad_Show/Cad_Show.vcxproj
@@ -110,6 +110,7 @@
     <ClInclude Include="Cad_ShowDoc.h" />
     <ClInclude Include="Cad_ShowView.h" />
     <ClInclude Include="DialogBar.h" />
+    <ClInclude Include="InforBar.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -120,6 +121,7 @@
     <ClCompile Include="Cad_ShowDoc.cpp" />
     <ClCompile Include="Cad_ShowView.cpp" />
     <ClCompile Include="DialogBar.cpp" />
+    <ClCompile Include="InforBar.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
