--- a/Cad_Show/Cad_Show/Cad_Show.vcxproj.filters
+++ b/Cad_Show/Cad_Show/Cad_Show.vcxproj.filters
@@ -46,6 +46,33 @@
     <None Include="res\icon1.ico">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\Cube.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Cone.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Sphere.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Torus.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Dodecahedron.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Icosehadron.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Octahedron.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Tetrahedron.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\Tearpot.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cad_Show.h">
@@ -78,6 +105,9 @@
     <ClInclude Include="InforBar.h">
       <Filter>Source Files\InfoBar</Filter>
     </ClInclude>
+    <ClInclude Include="SampleOpengl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cad_Show.cpp">
@@ -100,6 +130,9 @@
     </ClCompile>
     <ClCompile Include="InforBar.cpp">
       <Filter>Source Files\InfoBar</Filter>
+    </ClCompile>
+    <ClCompile Include="SampleOpengl.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
