--- a/Cad_Show/Cad_Show/Cad_Show.vcxproj
+++ b/Cad_Show/Cad_Show/Cad_Show.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="Cad_ShowDoc.h" />
     <ClInclude Include="Cad_ShowView.h" />
     <ClInclude Include="DialogBar.h" />
+    <ClInclude Include="DlgMaterialLight.h" />
     <ClInclude Include="glm.h" />
     <ClInclude Include="InforBar.h" />
     <ClInclude Include="MainFrm.h" />
@@ -138,6 +139,7 @@
     <ClCompile Include="Cad_ShowDoc.cpp" />
     <ClCompile Include="Cad_ShowView.cpp" />
     <ClCompile Include="DialogBar.cpp" />
+    <ClCompile Include="DlgMaterialLight.cpp" />
     <ClCompile Include="glm.cpp" />
     <ClCompile Include="InforBar.cpp" />
     <ClCompile Include="MainFrm.cpp" />
