--- a/Cad_Show/Cad_Show/Cad_Show.vcxproj.filters
+++ b/Cad_Show/Cad_Show/Cad_Show.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="glm.h">
       <Filter>Source Files\glm</Filter>
     </ClInclude>
+    <ClInclude Include="DlgMaterialLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Cad_Show.cpp">
@@ -142,6 +145,9 @@
     </ClCompile>
     <ClCompile Include="glm.cpp">
       <Filter>Source Files\glm</Filter>
+    </ClCompile>
+    <ClCompile Include="DlgMaterialLight.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
